[gd_scene load_steps=38 format=2]

[ext_resource path="res://attack2.png" type="Texture" id=1]
[ext_resource path="res://genebazBall.png" type="Texture" id=2]
[ext_resource path="res://genebazBallk.png" type="Texture" id=3]
[ext_resource path="res://Genebaz.gd" type="Script" id=6]
[ext_resource path="res://SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://SelectionArea.tscn" type="PackedScene" id=9]
[ext_resource path="res://InfoGeneba.tscn" type="PackedScene" id=10]
[ext_resource path="res://attack1.png" type="Texture" id=13]

[sub_resource type="CanvasItemMaterial" id=97]
resource_local_to_scene = true

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 13 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 13 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 13 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 13 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 13 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 13 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 13 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 13 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 13 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=124]
animations = [ {
"frames": [ SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ) ],
"loop": true,
"name": "Wait",
"speed": 5.0
}, {
"frames": [ SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ) ],
"loop": true,
"name": "GenebazUNO",
"speed": 8.0
}, {
"frames": [ SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ) ],
"loop": true,
"name": "Anim",
"speed": 8.0
}, {
"frames": [ SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ) ],
"loop": true,
"name": "GenebazDOS",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=123]
radius = 8.0

[node name="Genebaz3" type="KinematicBody2D"]
position = Vector2( -40, 24 )
scale = Vector2( 0.5, 0.5 )
collision_mask = 2
script = ExtResource( 6 )
genebaz_pos = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 97 )
position = Vector2( -16, -16 )
frames = SubResource( 124 )
animation = "Wait"
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 123 )

[node name="SelectionArea" parent="." instance=ExtResource( 9 )]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SelectionArea"]
shape = SubResource( 123 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -16.0
margin_top = -24.0
margin_right = 8.0
margin_bottom = -10.0
text = "Sel"
align = 3
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="Info" parent="." instance=ExtResource( 10 )]

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="selection_toggle" from="SelectionArea" to="." method="_on_SelectionArea_selection_toggle"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
